# Calculator-Py

./: LICENSE  README.md  pyproject.toml
Calculator/src/calculator_pociusmartynas/: calculator.py
Calculator/tests/: test_add.py  test_divide.py  test_multiply.py  test_reset.py  test_root.py  test_subtract.py
